--- a/style/main.css
+++ b/style/main.css
@@ -71,11 +71,8 @@ text-transform: uppercase;
     margin-top: 60px;
     
 }
-.conteiner2 {
-    width: 1366px;
-    height: 600px;
-    flex-shrink: 0;
-}
+
+
 .photo2 {
     position: relative;
 }
@@ -83,3 +80,57 @@ text-transform: uppercase;
     position: absolute;
     margin-top: 49px;
 }
+.main-slide-2 { 
+    height: 768px; 
+    background-size: cover; 
+    background-position: center; 
+    position: relative;  
+     
+    } 
+    .text-wrap2 { 
+    margin-left: 166px; 
+    position: absolute; 
+    left: 20px; 
+    right: 0; 
+    max-width: 1246px; 
+    margin: 92px auto; 
+    width: 100%; 
+    } 
+     
+     
+    .text-wrap2 h2{ 
+        color: #FFF; 
+        font-family: Montserrat; 
+        font-size: 36px; 
+        font-style: normal; 
+        font-weight: 300; 
+        line-height: normal; 
+        width: 502px; 
+        padding-bottom: 30px; 
+         
+    } 
+     
+     
+    .text-wrap2 p { 
+        color: #FFF; 
+        font-family: Raleway; 
+        font-size: 16px; 
+        font-style: normal; 
+        font-weight: 300; 
+        line-height: 30px; 
+        padding-bottom: 40px; 
+        width: 396px; 
+    } 
+     
+    .text-wrap2 a { 
+        color: var(--Accent-color, #EEC48B); 
+        font-family: Raleway; 
+        font-size: 16px; 
+        font-style: normal; 
+        font-weight: 500; 
+        line-height: 24px; 
+        text-transform: uppercase; 
+        padding-bottom: 10px; 
+        display: inline-block; 
+        border-bottom: 1px solid; 
+    }
